# software

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  connection-daemon.c  connection-standalone.c  connection.c  context.c  control.c  memory.c  osd-private.h  regaccess.c  system-info.c  trace.c
src/bindings/python/: Makefile.am  opensocdebug.i  osd_python.c  osd_python.h  setup.py.in
src/bindings/python/examples/: runelf.py
src/bindings/python/module/: session.py
src/bindings/python/opensocdebug/: session.py
src/include/: opensocdebug.h
src/tools/: Makefile.am
src/tools/cli/: Makefile.am  cli.c  cli.h  help_strings.h  memory_test.c  terminal.c  terminal.h
src/tools/daemon/: Makefile.am  daemon.c  daemon.h  handler.c  terminal.c
src/tools/osd_term/: soc_term.c
